--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-/src/openapi
+/src/openapi/openapi.json
 # Compiled output
 /dist
 /tmp
