--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "express": "^4.18.2",
     "ng-openapi-gen": "^0.52.0",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
