--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "@angular/ssr": "^17.3.3",
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "angular-calendar": "^0.31.1",
+    "date-fns": "^2.x.x",
     "express": "^4.18.2",
     "ng-openapi-gen": "^0.52.0",
     "primeflex": "^3.3.1",
@@ -38,6 +40,7 @@
     "@angular-devkit/build-angular": "^17.3.3",
     "@angular/cli": "^17.3.3",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/date-fns": "^2.x.x",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
