--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/resource": "^6.1.15",
+    "@fullcalendar/resource-timegrid": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "angular-calendar": "^0.31.1",
     "bootstrap": "^5.3.3",
